@@ -2,7 +2,7 @@
 # @Author: lnorb.com
 # @Date:   2021-12-15 07:15:28
 # @Last Modified by:   lnorb.com
-# @Last Modified time: 2022-01-16 11:16:15
+# @Last Modified time: 2022-01-16 15:24:21
 
 from kivy.properties import ObjectProperty
 from kivy.properties import ListProperty
@@ -277,12 +277,16 @@ class ChannelWidget(Widget):
 
         if link_fail:
             col = RED_FULL
-            if htlc.wire_failure == "TEMPORARY_CHANNEL_FAILURE":
-                if htlc.incoming_channel_id and htlc.outgoing_channel_id:
-                    print("FAIL!")
-                    print(htlc.__dict__)
-                    if htlc.failure_detail != "HTLC_EXCEEDS_MAX":
-                        audio_manager.play_link_fail_event()
+            if hasattr(htlc, "wire_failure"):
+                """
+                Not yet available for REST
+                """
+                if htlc.wire_failure == "TEMPORARY_CHANNEL_FAILURE":
+                    if htlc.incoming_channel_id and htlc.outgoing_channel_id:
+                        print("FAIL!")
+                        print(htlc.__dict__)
+                        if htlc.failure_detail != "HTLC_EXCEEDS_MAX":
+                            audio_manager.play_link_fail_event()
 
         # cols = {"forward_fail_event": RED, "link_fail_event": RED}
         # col = cols.get(htlc.event_outcome, WHITE)
