@@ -73,6 +73,9 @@ class AutoObj(object):
     def __str__(self):
         return self.toJSON()
 
+    def __getitem__(self, key):
+        return self.__dict__[key]
+
     def get(self, key, default=None):
         return self.__dict__.get(key, default)
 
